# leads

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  utils.py
app/db/: base.py
app/models/: models.py
app/schemas/: schemas.py
app/tests/: leads.py
