[tool.poetry]
name = "leads"
version = "0.1.0"
description = "Test app"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.1"}
sqlalchemy = "^2.0.10"
psycopg2 = "^2.9.6"
alembic = "^1.10.4"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
